Update Q3.java